force-app/main/default/objects/AppointmentSlot__c/AppointmentSlot__c.object-meta.xml
<CustomObject>
    <label>Appointment Slot</label>
    <nameField>
        <displayFormat>SLOT-{00000}</displayFormat>
        <label>Slot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Slots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>