force-app/main/default/objects/AppointmentSlot__c/fields/AppointmentSlotSummary__c.field-meta.xml
<CustomField>
    <fullName>AppointmentSlotSummary__c</fullName>
    <label>Appointment Slot Summary</label>
    <referenceTo>AppointmentSlotSummary__c</referenceTo>
    <relationshipLabel>Appointment Slots</relationshipLabel>
    <relationshipName>AppointmentSlots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>