force-app/main/default/objects/AppointmentSlot__c/fields/Dia_da_Semana__c.field-meta.xml
<CustomField>
    <fullName>Dia_da_Semana__c</fullName>
    <formula>CASE(
WEEKDAY(DATEVALUE( StartTime__c )),
1, &quot;7. Domingo&quot;,
2, &quot;1. Segunda-feira&quot;,
3, &quot;2. Terça-feira&quot;,
4, &quot;3. Quarta-feira&quot;,
5, &quot;4. Quinta-feira&quot;,
6, &quot;5. Sexta-feira&quot;,
7, &quot;6. Sábado&quot;,
&quot;Desconhecido&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dia da Semana</label>
    <type>Text</type>
</CustomField>