force-app/main/default/objects/AppointmentSlot__c/fields/Hora_do_dia__c.field-meta.xml
<CustomField>
    <fullName>Hora_do_dia__c</fullName>
    <formula>IF(
  (VALUE(MID(TEXT( StartTime__c ), 12, 2)) + 1) &lt; 10,
  &quot;0&quot; &amp; TEXT(VALUE(MID(TEXT( StartTime__c ), 12, 2)) + 1),
  TEXT(VALUE(MID(TEXT( StartTime__c ), 12, 2)) + 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora do dia</label>
    <type>Text</type>
</CustomField>