force-app/main/default/objects/AppointmentSlot__c/fields/Intervalo__c.field-meta.xml
<CustomField>
    <fullName>Intervalo__c</fullName>
    <formula>TEXT(DATEVALUE(StartTime__c)) &amp; &quot;, &quot; &amp; TEXT(TIMEVALUE(StartTime__c)) &amp; &quot; – &quot; &amp; TEXT(TIMEVALUE(EndTime__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intervalo</label>
    <type>Text</type>
</CustomField>