force-app/main/default/objects/AppointmentSlot__c/fields/IsFuture__c.field-meta.xml
<CustomField>
    <fullName>IsFuture__c</fullName>
    <formula>StartTime__c &gt;= NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Future</label>
    <type>Checkbox</type>
</CustomField>