force-app/main/default/objects/AppointmentSlot__c/fields/IsToday__c.field-meta.xml
<CustomField>
    <fullName>IsToday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Today</label>
    <type>Checkbox</type>
</CustomField>