force-app/main/default/objects/AppointmentSlot__c/fields/IsTomorrow__c.field-meta.xml
<CustomField>
    <fullName>IsTomorrow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tomorrow</label>
    <type>Checkbox</type>
</CustomField>